fixed textarea scrollbar for chrome

--- a/style.css
+++ b/style.css
@@ -7,6 +7,24 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+/* textarea custom scrollbar css start */
+::-webkit-scrollbar {
+  width: 0.2rem;
+  margin-right: 0.2rem;
+}
+
+::-webkit-scrollbar-track {
+  background: #F2F2F2;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #BDBDBD;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #6E6E6E;
+}
+/* textarea custom scrollbar css end */
 body {
   display: flex;
   align-items: center;
@@ -83,8 +101,11 @@ body {
   font-size: 1.06rem;
   font-weight: 500;
   letter-spacing: 1px;
+  /* to fix cutting text area corners by custom scrollbar start*/
+  border: 2.2px solid transparent;
+  box-shadow: 0 0 0 1.2px #aaa;
+  /* to fix cutting text area corners by custom scrollbar end*/
   border-radius: 4px;
-  border: 1px solid #aaa;
   padding: 0.3rem 2.2rem 0.3rem 1rem;
   resize: none;
   /* overflow: hidden; */
